2009-02-02  Tristan Gingold  <gingold@adacore.com>

	* deffilep.c: Add autogenerated file.
	* deffilep.h: Ditto.

2009-01-08  Dave Korn  <dave.korn.cygwin@gmail.com>

Backport bugfix from HEAD:

  2009-01-03  Dave Korn  <dave.korn.cygwin@gmail.com>

	* pe-dll.c (autofilter_liblist):  Add entry for shared libgcc.
	(libnamencmp):  New function.
	(auto_export):  Use it in place of strncmp when filtering libraries.

For older changes see ChangeLog-2008

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End:
