@@ -1,3 +1,8 @@
+2009-03-02  Alan Modra  <amodra@bigpond.net.au>
+
+	2008-09-25  Alan Modra  <amodra@bigpond.net.au>
+	* ldexp.c (fold_binary): Evaluate rhs when lhs not valid.
+
 2009-02-02  Tristan Gingold  <gingold@adacore.com>
 
 	* deffilep.c: Add autogenerated file.
